fixed image and brand break on supplier change

--- a/src/pages/Home/Homepage.css
+++ b/src/pages/Home/Homepage.css
@@ -21,7 +21,7 @@
 
 .data-layout {
   display: grid;
-  grid-template-columns: 0.5fr 0.5fr 0.5fr 1fr 1fr 1.5fr 0.8fr 0.8fr 0.8fr 0.8fr;
+  grid-template-columns: 0.4fr 0.5fr 0.5fr 1fr 1fr 1.5fr 0.8fr 0.8fr 0.8fr 0.8fr;
   padding: 15px 20px;
   align-items: center;
   text-align: left;
